# parky

./: .gitignore  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure~  parky.glade  parky.glade.bak
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
docs/: DB_diagram.drawio  Untitled Diagram.drawio
generators/: agent-gen.c  citizen-gen.c  parking-gen.c  reservation-gen.c  reservation-gen.h
helper/: id.c
interfaces/: agent.glade  citizen.glade  citizen.glade.bak  parking.glade  parky.glade  parky.glade.bak  reservation.glade  service.glade
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  admin.c  admin.h  agent.h  callbacks.c  callbacks.h  citizen.c  citizen.h  common.c  common.h  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  main.h  parking.h  parky  reservation.h  service.h
src/.deps/: admin.Po  agent.Po  callbacks.Po  citizen.Po  common.Po  interface.Po  main.Po  parking.Po  reservation.Po  support.Po
